# nonebot-plugin-icey

./: .gitignore  .pre-commit-config.yaml  Changelog.md  GUID.MD  README.md  README_CN.md  pyproject.toml
.docs/: Usage.md  Usage_CN.md
.github/workflows/: release.yml
src/nonebot_plugin_icey/: __init__.py
src/nonebot_plugin_icey/common/: dao.py  service.py
src/nonebot_plugin_icey/common/locales/: __init__.py  en.toml  zh.toml
src/nonebot_plugin_icey/modules/blacklist/: __init__.py  matcher.py  model.py
src/nonebot_plugin_icey/modules/debuger/: __init__.py
src/nonebot_plugin_icey/modules/filters/: matcher.py  model.py  service.py
src/nonebot_plugin_icey/modules/help/: __init__.py  matcher.py
src/nonebot_plugin_icey/modules/request/: __init__.py  matcher.py
src/nonebot_plugin_icey/modules/verify/: __init__.py  matcher.py  model.py  service.py
src/nonebot_plugin_icey/modules/welcome/: __init__.py  model.py  service.py
